Four lines of calculated widget lines

--- a/app/src/main/res/xml/next_reminders_widget_info.xml
+++ b/app/src/main/res/xml/next_reminders_widget_info.xml
@@ -3,12 +3,14 @@
     android:description="@string/app_widget_description"
     android:initialKeyguardLayout="@layout/next_reminders_widget"
     android:initialLayout="@layout/next_reminders_widget"
-    android:minWidth="110dp"
-    android:minHeight="40dp"
+    android:maxResizeWidth="400dp"
+    android:maxResizeHeight="150dp"
+    android:minResizeWidth="110dp"
+    android:minResizeHeight="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:previewLayout="@layout/next_reminders_widget"
-    android:resizeMode="vertical"
-    android:targetCellWidth="2"
+    android:resizeMode="horizontal|vertical"
+    android:targetCellWidth="3"
     android:targetCellHeight="1"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen" />
