--- a/app/src/main/res/layout/next_reminders_widget.xml
+++ b/app/src/main/res/layout/next_reminders_widget.xml
@@ -18,4 +18,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" />
+
+    <LinearLayout
+        android:id="@+id/nextRemindersWidgetLine3"
+        style="Widget.MedTimer.AppWidget.InnerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" />
+
+    <LinearLayout
+        android:id="@+id/nextRemindersWidgetLine4"
+        style="Widget.MedTimer.AppWidget.InnerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" />
+
 </LinearLayout>
