--- a/app/src/main/res/xml/next_reminders_widget_info.xml
+++ b/app/src/main/res/xml/next_reminders_widget_info.xml
@@ -12,5 +12,5 @@
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="3"
     android:targetCellHeight="1"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="0"
     android:widgetCategory="home_screen" />
