Dynamic widget layout

--- a/app/src/main/res/layout/next_reminders_widget.xml
+++ b/app/src/main/res/layout/next_reminders_widget.xml
@@ -7,37 +7,19 @@
     android:orientation="vertical"
     android:theme="@style/Theme.MedTimer.AppWidgetContainer">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="UseCompoundDrawables">
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/app_url"
-            android:src="@mipmap/logo_round" />
-
-        <TextView
-            android:id="@+id/appName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/next_reminders" />
-    </LinearLayout>
+    <include layout="@layout/next_reminder_widget_caption" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/nextRemindersWidgetLine1"
             style="@style/Widget.MedTimer.AppWidget.InnerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal" />
 
         <LinearLayout
@@ -49,7 +31,8 @@
             android:id="@+id/nextRemindersWidgetLine2"
             style="@style/Widget.MedTimer.AppWidget.InnerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal" />
 
         <LinearLayout
@@ -61,7 +44,8 @@
             android:id="@+id/nextRemindersWidgetLine3"
             style="@style/Widget.MedTimer.AppWidget.InnerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal" />
 
         <LinearLayout
@@ -73,7 +57,8 @@
             android:id="@+id/nextRemindersWidgetLine4"
             style="@style/Widget.MedTimer.AppWidget.InnerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="horizontal" />
     </LinearLayout>
 
