--- a/app/src/main/res/xml/next_reminders_widget_info.xml
+++ b/app/src/main/res/xml/next_reminders_widget_info.xml
@@ -3,14 +3,14 @@
     android:description="@string/app_widget_description"
     android:initialKeyguardLayout="@layout/next_reminders_widget"
     android:initialLayout="@layout/next_reminders_widget"
-    android:maxResizeWidth="400dp"
-    android:maxResizeHeight="150dp"
-    android:minResizeWidth="110dp"
-    android:minResizeHeight="40dp"
+    android:maxResizeWidth="600dp"
+    android:maxResizeHeight="200dp"
+    android:minResizeWidth="160dp"
+    android:minResizeHeight="50dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:previewLayout="@layout/next_reminders_widget"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="3"
     android:targetCellHeight="1"
-    android:updatePeriodMillis="0"
+    android:updatePeriodMillis="3600000"
     android:widgetCategory="home_screen" />
