--- a/app/src/main/res/drawable-v21/app_widget_background.xml
+++ b/app/src/main/res/drawable-v21/app_widget_background.xml
@@ -5,6 +5,6 @@ appWidgetRadius attribute value
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="?attr/appWidgetRadius" />
+    <corners android:radius="?attr/medtimerWidgetRadius" />
     <solid android:color="?android:colorBackground" />
 </shape>
