--- a/app/src/main/res/layout/next_reminders_widget.xml
+++ b/app/src/main/res/layout/next_reminders_widget.xml
@@ -1,11 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nextReminderWidget"
-    style="@style/Widget.MedTimer.AppWidget.Container"
+    style="@style/Widget.MedTimer.Container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:theme="@style/Theme.MedTimer.AppWidgetContainer">
+    android:theme="@style/Theme.MedTimer.WidgetContainer">
 
     <include layout="@layout/next_reminder_widget_caption" />
 
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:id="@+id/nextRemindersWidgetLine1"
-            style="@style/Widget.MedTimer.AppWidget.InnerView"
+            style="@style/Widget.MedTimer.InnerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -29,7 +29,7 @@
 
         <LinearLayout
             android:id="@+id/nextRemindersWidgetLine2"
-            style="@style/Widget.MedTimer.AppWidget.InnerView"
+            style="@style/Widget.MedTimer.InnerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -42,7 +42,7 @@
 
         <LinearLayout
             android:id="@+id/nextRemindersWidgetLine3"
-            style="@style/Widget.MedTimer.AppWidget.InnerView"
+            style="@style/Widget.MedTimer.InnerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -55,7 +55,7 @@
 
         <LinearLayout
             android:id="@+id/nextRemindersWidgetLine4"
-            style="@style/Widget.MedTimer.AppWidget.InnerView"
+            style="@style/Widget.MedTimer.InnerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
