--- a/app/src/main/res/layout/next_reminders_widget_preview.xml
+++ b/app/src/main/res/layout/next_reminders_widget_preview.xml
@@ -19,7 +19,20 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="horizontal" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/nextReminderWidgetLineText"
+                style="@style/Widget.MedTimer.InnerText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:maxLines="1"
+                android:orientation="horizontal"
+                android:text="@string/preview_next_reminders_widget_line">
+
+            </TextView>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
