--- a/app/src/main/res/layout/next_reminder_widget_caption.xml
+++ b/app/src/main/res/layout/next_reminder_widget_caption.xml
@@ -5,12 +5,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal"
         tools:ignore="UseCompoundDrawables">
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_marginEnd="16dp"
             android:contentDescription="@string/app_url"
             android:src="@mipmap/logo_round" />
