--- a/app/src/main/res/drawable-v21/app_widget_background.xml
+++ b/app/src/main/res/drawable-v21/app_widget_background.xml
@@ -6,5 +6,5 @@ appWidgetRadius attribute value
     android:shape="rectangle">
 
     <corners android:radius="?attr/medtimerWidgetRadius" />
-    <solid android:color="?android:colorBackground" />
+    <solid android:color="?attr/colorSurface" />
 </shape>
