--- a/app/src/main/res/drawable-v21/app_widget_inner_view_background.xml
+++ b/app/src/main/res/drawable-v21/app_widget_inner_view_background.xml
@@ -6,5 +6,5 @@ appWidgetInnerRadius attribute value
     android:shape="rectangle">
 
     <corners android:radius="?attr/medtimerWidgetInnerRadius" />
-    <solid android:color="?android:colorPrimary" />
+    <solid android:color="?attr/colorPrimary" />
 </shape>
