--- a/app/src/main/res/layout/next_reminders_widget_line.xml
+++ b/app/src/main/res/layout/next_reminders_widget_line.xml
@@ -1,10 +1,10 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/nextReminderWidgetLineText"
-    style="@style/Widget.MedTimer.InnerText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
     android:maxLines="1"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:textColor="?attr/colorOnPrimary">
 
 </TextView>
