--- a/app/src/main/res/layout/next_reminders_widget_preview.xml
+++ b/app/src/main/res/layout/next_reminders_widget_preview.xml
@@ -23,13 +23,13 @@
 
             <TextView
                 android:id="@+id/nextReminderWidgetLineText"
-                style="@style/Widget.MedTimer.InnerText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:maxLines="1"
                 android:orientation="horizontal"
-                android:text="@string/preview_next_reminders_widget_line">
+                android:text="@string/preview_next_reminders_widget_line"
+                android:textColor="?attr/colorOnPrimary">
 
             </TextView>
         </LinearLayout>
