--- a/app/src/main/res/xml/next_reminders_widget_info.xml
+++ b/app/src/main/res/xml/next_reminders_widget_info.xml
@@ -4,8 +4,10 @@
     android:initialLayout="@layout/next_reminders_widget"
     android:maxResizeWidth="600dp"
     android:maxResizeHeight="200dp"
-    android:minResizeWidth="160dp"
-    android:minResizeHeight="50dp"
+    android:minWidth="200dp"
+    android:minHeight="45dp"
+    android:minResizeWidth="200dp"
+    android:minResizeHeight="45dp"
     android:previewLayout="@layout/next_reminders_widget_preview"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="3"
