--- a/app/src/main/res/layout/next_reminders_widget_preview.xml
+++ b/app/src/main/res/layout/next_reminders_widget_preview.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/nextRemindersWidgetLine1"
+            android:id="@+id/widgetLine1"
             style="@style/Widget.MedTimer.InnerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -22,16 +22,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/nextReminderWidgetLineText"
+                android:id="@+id/widgetLineText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:maxLines="1"
                 android:orientation="horizontal"
                 android:text="@string/preview_next_reminders_widget_line"
-                android:textColor="?attr/colorOnPrimary">
-
-            </TextView>
+                android:textColor="?attr/colorOnPrimary" />
         </LinearLayout>
     </LinearLayout>
 
