--- a/app/src/main/res/layout/next_reminders_widget_small.xml
+++ b/app/src/main/res/layout/next_reminders_widget_small.xml
@@ -8,18 +8,6 @@
 
     <include layout="@layout/next_reminder_widget_caption" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:id="@+id/nextRemindersWidgetLine1"
-            style="@style/Widget.MedTimer.InnerView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal" />
-    </LinearLayout>
+    <include layout="@layout/widget_one_line" />
 
 </LinearLayout>
