--- a/app/src/main/res/layout/widget_line.xml
+++ b/app/src/main/res/layout/widget_line.xml
@@ -1,5 +1,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/nextReminderWidgetLineText"
+    android:id="@+id/widgetLineText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
