--- a/app/src/main/res/layout/latest_reminder_widget_caption.xml
+++ b/app/src/main/res/layout/latest_reminder_widget_caption.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="@string/next_reminders" />
+            android:text="@string/recent_events" />
     </LinearLayout>
 
 </merge>
