--- a/app/src/main/res/xml/latest_reminders_widget_info.xml
+++ b/app/src/main/res/xml/latest_reminders_widget_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:description="@string/recent_events"
     android:initialKeyguardLayout="@layout/latest_reminders_widget"
     android:initialLayout="@layout/latest_reminders_widget"
     android:maxResizeWidth="600dp"
