--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,19 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="Theme.MedTimer.WidgetContainerParent" parent="Theme.Material3.DynamicColors.Light">
+        <!-- Radius of the outer bound of widgets to make the rounded corners -->
+        <item name="medtimerWidgetRadius">16dp</item>
+        <!--
+        Radius of the inner view's bound of widgets to make the rounded corners.
+        It needs to be 8dp or less than the value of appWidgetRadius
+        -->
+        <item name="medtimerWidgetInnerRadius">8dp</item>
+    </style>
+
+    <style name="Theme.MedTimer.WidgetContainer" parent="Theme.MedTimer.WidgetContainerParent">
+        <!-- Apply padding to avoid the content of the widget colliding with the rounded corners -->
+        <item name="medtimerWidgetPadding">6dp</item>
+    </style>
 </resources>
