Increase number of steps on domain axis if date label is longer as per locale

--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -55,17 +55,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        ap:graphAnchor="left_bottom"
+        ap:graphAnchor="left_top"
         ap:graphHeight="50dp"
         ap:graphHeightMode="fill"
         ap:graphHorizontalPosition="0"
         ap:graphHorizontalPositioning="absolute_from_left"
-        ap:graphPaddingBottom="25dp"
+        ap:graphPaddingBottom="15dp"
         ap:graphPaddingLeft="20dp"
         ap:graphPaddingRight="5dp"
         ap:graphPaddingTop="20dp"
-        ap:graphVerticalPosition="50dp"
-        ap:graphVerticalPositioning="absolute_from_bottom"
+        ap:graphVerticalPosition="0"
+        ap:graphVerticalPositioning="absolute_from_top"
         ap:gridClippingEnabled="false"
         ap:legendAnchor="left_bottom"
         ap:legendHeight="50dp"
@@ -77,9 +77,8 @@
         ap:legendVisible="true"
         ap:legendWidth="10dp"
         ap:legendWidthMode="fill"
-        ap:lineLabelInsetBottom="-16dp"
+        ap:lineLabelInsetBottom="-13dp"
         ap:lineLabelInsetLeft="-13dp"
-        ap:lineLabelRotationBottom="30"
         ap:lineLabels="left|bottom"
         ap:marginTop="10dp" />
 
