372 remember last analysis view (#377)
* Refactored analysis view to save state of last viewed fragment

* Change to chip group for selecting fragment
Fix tests

* Shorten function

--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ap="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,29 +12,45 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/reminderTableButton"
-            style="?attr/materialIconButtonFilledStyle"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/analysisView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:contentDescription="@string/tabular_view"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            app:icon="@drawable/table"
-            app:iconPadding="0dp" />
+            android:layout_marginStart="10dp"
+            ap:checkedChip="@id/chartChip"
+            ap:selectionRequired="true"
+            ap:singleSelection="true">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/reminderCalendarButton"
-            style="?attr/materialIconButtonFilledStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:contentDescription="@string/calendar"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            app:icon="@drawable/calendar_week"
-            app:iconPadding="0dp" />
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chartChip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:contentDescription="@string/analysis"
+                ap:chipEndPadding="0dp"
+                ap:chipIcon="@drawable/bar_chart"
+                ap:chipStartPadding="16dp" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/tableChip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:contentDescription="@string/tabular_view"
+                ap:chipEndPadding="0dp"
+                ap:chipIcon="@drawable/table"
+                ap:chipStartPadding="16dp" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/calendarChip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:contentDescription="@string/calendar"
+                ap:chipEndPadding="0dp"
+                ap:chipIcon="@drawable/calendar_week"
+                ap:chipStartPadding="16dp" />
+        </com.google.android.material.chip.ChipGroup>
 
         <Space
             android:layout_width="0dp"
@@ -50,57 +65,11 @@
             android:entries="@array/analysis_days" />
     </LinearLayout>
 
-    <com.androidplot.xy.XYPlot
-        android:id="@+id/medicinesPerDayChart"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        ap:graphAnchor="left_top"
-        ap:graphHeight="50dp"
-        ap:graphHeightMode="fill"
-        ap:graphHorizontalPosition="0"
-        ap:graphHorizontalPositioning="absolute_from_left"
-        ap:graphPaddingBottom="15dp"
-        ap:graphPaddingLeft="20dp"
-        ap:graphPaddingRight="5dp"
-        ap:graphPaddingTop="20dp"
-        ap:graphVerticalPosition="0"
-        ap:graphVerticalPositioning="absolute_from_top"
-        ap:gridClippingEnabled="false"
-        ap:legendAnchor="left_bottom"
-        ap:legendHeight="50dp"
-        ap:legendHeightMode="absolute"
-        ap:legendHorizontalPosition="0"
-        ap:legendHorizontalPositioning="absolute_from_left"
-        ap:legendVerticalPosition="0"
-        ap:legendVerticalPositioning="absolute_from_bottom"
-        ap:legendVisible="true"
-        ap:legendWidth="10dp"
-        ap:legendWidthMode="fill"
-        ap:lineLabelInsetBottom="-13dp"
-        ap:lineLabelInsetLeft="-13dp"
-        ap:lineLabels="left|bottom"
-        ap:marginTop="10dp" />
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <com.androidplot.pie.PieChart
-            android:id="@+id/takenSkippedChartTotal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            tools:ignore="NestedWeights" />
-
-        <com.androidplot.pie.PieChart
-            android:id="@+id/takenSkippedChart"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
